feat(ui): add PQ address support and security indicators
- Update AddFriendForm to accept both 76 and 92 character Tox IDs
- Show format indicator (classical/PQ) when entering addresses
- Add security shield icons for identity status:
  - shield_gray.svg - Unknown/disconnected
  - shield_yellow.svg - Classical (not quantum-resistant)
  - shield_blue.svg - PQ Unverified
  - shield_green.svg - PQ Verified (fully quantum-resistant)
- Update accessibility descriptions for PQ support

--- a/res.qrc
+++ b/res.qrc
@@ -30,6 +30,10 @@
         <file>img/status/offline.svg</file>
         <file>img/status/online_notification.svg</file>
         <file>img/status/online.svg</file>
+        <file>img/security/shield_gray.svg</file>
+        <file>img/security/shield_yellow.svg</file>
+        <file>img/security/shield_blue.svg</file>
+        <file>img/security/shield_green.svg</file>
         <file>img/taskbar/dark/taskbar_away_event.svg</file>
         <file>img/taskbar/dark/taskbar_away.svg</file>
         <file>img/taskbar/dark/taskbar_busy_event.svg</file>
